// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge function Returns the correct badge 1`] = `
<span
  className="chakra-badge css-ifsvay"
>
  Upcoming
</span>
`;

exports[`Badge function Returns the correct badge 2`] = `
<span
  className="chakra-badge css-ifsvay"
>
  Concluded
</span>
`;

exports[`Badge function Returns the correct badge 3`] = `
<span
  className="chakra-badge css-ifsvay"
>
  Cancelled
</span>
`;

exports[`Badge function Returns the correct badge 4`] = `
<span
  className="chakra-badge css-ifsvay"
>
  A badge not covered in the function
</span>
`;
